--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,10 @@ button
     background-color: #5f9341;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #5f9341;
     font-weight: bold;
     margin-top: 10px;
+    cursor: pointer;
 }
 
 ul
@@ -39,4 +40,10 @@ li a
 {
     color: #5f9341;
 
+}
+
+#delete-btn
+{
+    background-color: white;
+    color: #5f9341;
 }
